fix cut-off contact form on mobile

--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -14,6 +14,9 @@ main {
 .section-heading:not(#welcome) {
     margin-top: 100px;
 }
+.contact-container {
+    margin-top: 250px;
+}
 .scrolling-anchor {
     margin-bottom: 30px;
     font-size: 0;
